--- a/lib/pose_detection/realyoga.ipynb
+++ b/lib/pose_detection/realyoga.ipynb
@@ -510,8 +510,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "75b0fdc5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "import json\n",
+    "\n",
+    "# Load the data\n",
+    "df = pd.read_csv(\"pose_mean_angles.csv\")\n",
+    "\n",
+    "# Create and fit the label encoder\n",
+    "le = LabelEncoder()\n",
+    "le.fit(df[\"label\"])\n",
+    "\n",
+    "# Create label map with native Python integers\n",
+    "label_map = {int(k): v for k, v in zip(le.transform(le.classes_), le.classes_)}\n",
+    "\n",
+    "# Save to file\n",
+    "with open(\"label_map.json\", \"w\") as f:\n",
+    "    json.dump(label_map, f, indent=4) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4ae8d7f0",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -519,7 +545,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -533,7 +559,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.12.3"
   }
  },
  "nbformat": 4,
