--- a/assets/realyoga.ipynb
+++ b/assets/realyoga.ipynb
@@ -289,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "75ccdbbc",
    "metadata": {},
    "outputs": [
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "id": "b84d5d69",
    "metadata": {},
    "outputs": [
@@ -423,33 +423,33 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Assets written to: C:\\Users\\shres\\AppData\\Local\\Temp\\tmpq2pikgy3\\assets\n"
+      "INFO:tensorflow:Assets written to: C:\\Users\\shres\\AppData\\Local\\Temp\\tmpg2drsau3\\assets\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "INFO:tensorflow:Assets written to: C:\\Users\\shres\\AppData\\Local\\Temp\\tmpq2pikgy3\\assets\n"
+      "INFO:tensorflow:Assets written to: C:\\Users\\shres\\AppData\\Local\\Temp\\tmpg2drsau3\\assets\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Saved artifact at 'C:\\Users\\shres\\AppData\\Local\\Temp\\tmpq2pikgy3'. The following endpoints are available:\n",
+      "Saved artifact at 'C:\\Users\\shres\\AppData\\Local\\Temp\\tmpg2drsau3'. The following endpoints are available:\n",
       "\n",
       "* Endpoint 'serve'\n",
       "  args_0 (POSITIONAL_ONLY): TensorSpec(shape=(None, 7), dtype=tf.float32, name='input_layer_1')\n",
       "Output Type:\n",
       "  TensorSpec(shape=(None, 9), dtype=tf.float32, name=None)\n",
       "Captures:\n",
-      "  2639840494032: TensorSpec(shape=(), dtype=tf.resource, name=None)\n",
-      "  2639836688272: TensorSpec(shape=(), dtype=tf.resource, name=None)\n",
-      "  2639836686160: TensorSpec(shape=(), dtype=tf.resource, name=None)\n",
-      "  2639836690000: TensorSpec(shape=(), dtype=tf.resource, name=None)\n",
-      "  2639836692304: TensorSpec(shape=(), dtype=tf.resource, name=None)\n",
-      "  2639836685776: TensorSpec(shape=(), dtype=tf.resource, name=None)\n",
+      "  2639838851728: TensorSpec(shape=(), dtype=tf.resource, name=None)\n",
+      "  2639840494800: TensorSpec(shape=(), dtype=tf.resource, name=None)\n",
+      "  2639840495952: TensorSpec(shape=(), dtype=tf.resource, name=None)\n",
+      "  2639840502288: TensorSpec(shape=(), dtype=tf.resource, name=None)\n",
+      "  2639840494416: TensorSpec(shape=(), dtype=tf.resource, name=None)\n",
+      "  2639840496528: TensorSpec(shape=(), dtype=tf.resource, name=None)\n",
       "✅ Conversion complete. Saved as angle_pose_model.tflite\n"
      ]
     }
@@ -473,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "75b0fdc5",
    "metadata": {},
    "outputs": [],
